name:                tasty-expected-failure-exception
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Joe Hermaszewski
maintainer:          git@monoid.al
category:            Testing
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
  build-depends:

test-suite test
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  main-is:
    Test.hs
  build-depends:
    base >= 4 && < 5,
    bytestring >= 0.10 && < 0.11,
    tasty >= 0.10 && < 0.12,
    tasty-expected-failure >= 0.11 && < 0.12,
    tasty-golden >= 2.3 && < 2.4

